downloaded the htmx.min.js file directly into repo instead of calling out to the cdn

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Dev homepage for Chase Lambert" />
-    <script src="https://unpkg.com/htmx.org@1.7.0"></script>
+    <script src="htmx.min.js"></script>
     <link rel="stylesheet" href="main.css" />
     <title>Document</title>
   </head>
